--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "webpack --mode production",
     "eslintInit": "eslint --init",
     "lint": "eslint src/*.js",
     "lint:fix": "eslint --fix --ext .js,.jsx .",
     "build-css": "node-sass src/index.scss src/index.css",
-    "start": "webpack serve",
-    "test": "jest"
+    "start": "webpack serve"
   },
   "keywords": [],
   "author": "",
@@ -55,6 +54,7 @@
     "react-router-dom": "^5.2.0",
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "uuid": "^3.3.3"
   }
 }
