--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
+    "test-cov": "jest --coverage",
     "build": "webpack --mode production",
     "eslintInit": "eslint --init",
     "lint": "eslint src/*.js",
